[package]
name = "esp_ir"
version = "0.1.0"

edition = "2021"
resolver = "2"

[[bin]]
name = "esp_ir"
harness = false # We can't use the default rust libtest harness for a crosscompile target

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow       = "=1.0.86"
crc = "3.2.1"
embedded-hal = "=1.0.0"
esp-idf-hal = "0.44.1"
esp-idf-svc  = "=0.49.0"
esp-idf-sys = "0.35.0"
log = "0.4.22"
toml-cfg = "0.2.0"

[build-dependencies]
embuild = "=0.32.0"
